# diagraml

./: .gitignore  README.md  diagraml.opam  dune
example/: dune  main.ml  main.tex
lib/: diagraml.ml  dune
